add little more

--- a/ESP32-INMP441-ArduinoIDE/Proof ESP32 Sucks for Sound/plot_sinusoid_sound.ipynb
+++ b/ESP32-INMP441-ArduinoIDE/Proof ESP32 Sucks for Sound/plot_sinusoid_sound.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,20 +19,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### IMPORT SINUSOID SOUND CAPTURED BY ESP32"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:1: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "<>:1: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_20648\\2149541745.py:1: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "  data = pd.read_csv(\"Proof ESP32 Sucks for Sound\\sound_samples.csv\")\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -124,30 +121,44 @@
        "[96576 rows x 1 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"sound_samples_voicenoised.csv\")\n",
+    "data = pd.read_csv(\"sound_sinusoid_captured.csv\")\n",
     "data"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "samplingFreq = 10000 # Disampling pada frekuensi 10 kHz = 10000 sampel/s\n",
-    "tlims = [0,10]       # batas waktu dalam detik (s)\n",
-    "time = np.linspace(tlims[0],tlims[1],(tlims[1]-tlims[0])*samplingFreq)"
+    "### GENERATE TIME"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samplingFreq = 10000 # Disampling pada frekuensi 10 kHz = 10000 sampel/s\n",
+    "tlims = [0,3]       # batas waktu dalam detik (s)\n",
+    "time = np.linspace(tlims[0],tlims[1],(tlims[1]-tlims[0])*samplingFreq)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PLOT CAPTURED SOUND"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +167,7 @@
        "Text(0, 0.5, 'magnitude')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
