clean up the mess

--- a/Filter-Coefficient-Generated-Sinusoid-Signals/filtered-coeff-sinusoid.ipynb
+++ b/Filter-Coefficient-Generated-Sinusoid-Signals/filtered-coeff-sinusoid.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This program is to apply butterworth coefficient filter to generated sinusoidal signal in order to prove the coefficient could replace all the determined noise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### IMPORT LIBRARY"
    ]
   },
@@ -187,32 +194,32 @@
     "### TRANSFER FUNCTION BUTTERWORTH LOW PASS FILTER\n",
     "*cut-off frequency ($\\omega_c$) is 4900 (low pass)\n",
     "\n",
-    "Persamaan untuk Butterworth filter dengan gain DC standard ($G=1$) adalah sebagai berikut.\n",
+    "Butterworth filter formula with DC standard gain ($G=1$) is:\n",
     "\n",
-    "* Pilih frekuensi cut-off $\\omega_c$.\n",
-    "* Fungsi alih untuk Butterworth low-pass filter dengan $\\omega_c = 1$ dapat dituliskan sebagai Persamaan (2) berikut (https://en.wikipedia.org/wiki/Butterworth_filter):\n",
+    "* Choose cut-off frequency $\\omega_c$.\n",
+    "* Transfer function for Butterworth low-pass filter with $\\omega_c = 1$ can be written as Equation (2) (https://en.wikipedia.org/wiki/Butterworth_filter):\n",
     "\n",
     "  $H(s) = \\frac{1}{\\sum_0^{n} a_k s^k}$ $...(2)$\n",
     "\n",
-    "  where $n$ adalah jumlah orde filter dan koefisien filter diperoleh dari persamaan rekursif berikut (Persamaan (3)):\n",
+    "  where $n$ is total filter order and filter coefficient obtained from this recursive equation (Equation (3)):\n",
     "  \n",
     "  $a_{k+1} = \\frac{\\cos( k \\gamma )}{\\sin((k+1)\\gamma)} a_k$ $...(3)$\n",
     "\n",
-    "  dengan $a_0 = 1$ dan $\\gamma = \\frac{\\pi}{2n}$.\n",
+    "  with $a_0 = 1$ dan $\\gamma = \\frac{\\pi}{2n}$.\n",
     "\n",
-    "* Karena polinomial Butterworth adalah\n",
+    "* Because Butterworth polinomial is\n",
     "  \n",
     "  $B_n(s) = \\sum_{k=0}^n a_k s^k$ $...(4)$\n",
     "\n",
-    "  dan kita butuh menginputkan sekelompok frekuensi cut-off $\\omega_c$ baru, maka dapat disubstitusikan sebagaimana Persamaan (5):\n",
+    "  and we need to insert a group of new cut-off frequency $\\omega_c$, so it can be substituted with Equation (5):\n",
     "\n",
     "  $B_n = \\sum_{k=0}^n a_k \\left(\\frac{s}{\\omega_c}\\right)^k = \\sum_{k=0}^n \\frac{a_k}{{\\omega_c}^k} s^k$ $...(5)$\n",
     "\n",
-    "  dapat disederhanakan menjadi\n",
+    "  and be simplified as\n",
     "\n",
     "  $B_n(s) = \\sum_{k=0}^n c_k s^k$ $...(6)$\n",
     "\n",
-    "  dengan $c_k = \\frac{a_k}{{\\omega_c}^k}$\n",
+    "  with $c_k = \\frac{a_k}{{\\omega_c}^k}$\n",
     "    "
    ]
   },
@@ -260,10 +267,10 @@
    "outputs": [],
    "source": [
     "# Low-pass filter\n",
-    "w0 = 2*np.pi*4900; # frekuensi cut-off (rad/s), frekuensi cut-off dipilih 4900 Hz\n",
-    "num = [1];      # koefisien pembilang (numerator) dari fungsi alih\n",
-    "den = c;        # koefisien penyebut (denominator) dari fungsi alih\n",
-    "lowPass = signal.TransferFunction(num,den) # Generate fungsi alih\n"
+    "w0 = 2*np.pi*4900; # cut-off frequency (rad/s), the formula is omega = 2.π.fc\n",
+    "num = [1];      # numerator of the transfer function\n",
+    "den = c;        # denominator of transfer function\n",
+    "lowPass = signal.TransferFunction(num,den) # Generate transfer function\n"
    ]
   },
   {
@@ -271,9 +278,9 @@
    "metadata": {},
    "source": [
     "### DISCRETE TRANSFER FUNCTION\n",
-    "Untuk mengimplementasikan *lom-pass filter* pada *hardware*, maka dibutuhkan fungsi alih diskrit. Sehingga yang awalnya adalah fungsi alih analog, maka harus diubah terlebih dahulu dengan melakukan transformasi dari domain analog ($s$) ke domain digital ($z$). Berikut langkahnya.\n",
-    "* Apabila *time step* adalah $\\Delta t = 1/f_s$\n",
-    "* Gunakan metode kode <code>to_discrete</code>untuk menghitung transformasi bilinear ($\\alpha = 1/2$)."
+    "To apply low-pass filter to hardware, it needs discrete transfer function. So it needs to convert the previously analog transfer function from analog domain ($s$) into digital domain ($z$). Here is how.\n",
+    "* If time step is $\\Delta t = 1/f_s$\n",
+    "* Use code method <code>to_discrete</code> to calculate bilinear transformation ($\\alpha = 1/2$)."
    ]
   },
   {
@@ -294,7 +301,7 @@
     }
    ],
    "source": [
-    "# # Mengubah Fungsi alih analog menjadi Fungsi alih diskrit dengan delta_t = 1/samplingFrequency\n",
+    "# Convert analog transfer function to discrete transfer function with delta_t = 1/samplingFrequency\n",
     "dt = 1.0/samplingFreq\n",
     "discreteLowPass = lowPass.to_discrete(dt,method='gbt',alpha=0.5)\n",
     "print(discreteLowPass)"
@@ -305,31 +312,33 @@
    "metadata": {},
    "source": [
     "### CALCULATE COEFFICIENT AND APPLY IT OFFLINE\n",
-    "Untuk mengimplementasikan filter pada suatu sistem dapat dilakukan dalam domain waktu. Representasi fungsi alih dalam domain waktu diskrit direpresentasikan dalam bentuk persamaan beda (*difference equation*) yang disajikan pada Persamaan (4) berikut.\n",
+    "To implement filter on a system it can be done on time domain. Transfer function representation on discrete time domain represented in differential function form that showed on Equation (4).\n",
     "\n",
     "  $y[n] = a_1 y[n-1] + a_2 y[n-2] + ... + b_0 x[n] + b_1 x[n-1] + ...$\n",
     "\n",
     "$...(4)$\n",
     "\n",
-    "Persamaan beda dapat diperoleh dari invers transformasi-$Z$, yang awalnya berbentuk sebagaimana Persamaan (5) berikut.\n",
+    "Differential function can be obtained from inverse $Z$-transformation, that previously in the form of Equation (5).\n",
     "\n",
     "  $H(z) = \\frac{b_0 + b_1 z^{-1} + b_2 z^{-2} + \\ldots}{1 - a_1 z^{-1} - a_2 z^{-2} + \\ldots}$ $...(5)$\n",
     "\n",
-    "(dimana $b$ dan $a$ adalah koefisien filter yang dihasilkan sebelumnya)\n",
+    "(where $b$ and $a$ is the filter coefficient generated previously)\n",
     "\n",
-    "Bandingkan dengan koefisien yang diperoleh dari fungsi alih menggunakan kode berikut:\n",
+    "Compared with coefficient obtained from transfer function using this code:\n",
     "<code>\n",
     "num = [b_0, b_1, b_2]\n",
     "den = [1, a_1, a_2]\n",
     "</code>\n",
-    "hasilnya adalah:\n",
+    "the result is:\n",
     "$$H(z) = \\frac{b_0 z^2 + b_1 z + b_2}{z^2 + a_1 z + a_2}$$\n",
-    "yang mana ini sebanding dengan Persamaan (5) berikut:\n",
+    "where this is equal to Equation (5):\n",
     "$$H(z) = \\frac{b_0 + b_1 z^{-1} + b_2 z^{-2}}{1 + a_1 z^{-1} + a_2 z^{-2}}$$\n",
     "\n",
-    "Berdasarkan hal ini, maka jumlah koefisien yang diperoleh akan sama dengan jumlah orde filter yang terdefinisi pada pembilang dan penyebut dari fungsi alih. Perbedaannya hanya pada koefisien denominatornya bertanda negatif. Selain itu, untuk implementasi filter, beberapa hal yang perlu diperhatikan pada kode yang disusun antara lain:\n",
-    "* Untuk filtering sinyal, terapkan kofisien menggunakan persamaan beda (seperti pada Persamaan (4)).\n",
-    "* Sinyal terfilter dalam domain waktu dan power spektrum sinyal dalam domain frekuensi diplot bersama dengan sinyal raw (sinyal input)."
+    "According to this, so the total coefficient obtained will be equal to total filter order defined in numerator dan denominator from transfer function. The difference is only at denominator coefficient sign is negative.\n",
+    "\n",
+    "Other than that there are several things should be watched on the code organized:\n",
+    "* For signal filtering, apply coefficient using differential function (like in Equation (4)).\n",
+    "* Filtered signal in time domain and the power spectrum in frequency domain plotted together with raw signal (input)"
    ]
   },
   {
@@ -367,13 +376,13 @@
     }
    ],
    "source": [
-    "# Panggil koefisien Filter dari Fungsi alih diskrit sebelumnya (dengan negative sign)\n",
+    "# Recall filter coefficient from discrete (using negative sign)\n",
     "b = discreteLowPass.num\n",
     "a = -discreteLowPass.den\n",
     "print(\"Filter coefficients b_i: \" + str(b))\n",
     "print(\"Filter coefficients a_i: \" + str(a[1:]))\n",
     "\n",
-    "# Implementasi Filter Sinyal Menggunakan Persamaan Beda\n",
+    "# Apply signal filter using transfer function\n",
     "Nb = len(b)\n",
     "yfilt = np.zeros(len(y))\n",
     "for m in range(3,len(y)):\n",
@@ -381,7 +390,7 @@
     "    for i in range(1,Nb):\n",
     "        yfilt[m] += a[i]*yfilt[m-i] + b[i]*y[m-i]\n",
     "\n",
-    "# Plot Sinyal Input x(n) dan Output terfilter y(n)\n",
+    "# Plot the input signal x(n) and filtered output y(n)\n",
     "plt.figure()\n",
     "plt.plot(t,y)\n",
     "plt.plot(t,yfilt)\n",
